force-app/main/default/objects/Rocket_Auth0_Auth_Provider__mdt/Rocket_Auth0_Auth_Provider__mdt.object-meta.xml
<CustomObject>
    <description>Stores configuration data for custom Rocket Auth0 auth providers A CMDT record will be generated for each auth provider created. The CMDT fields define the configuration fields for the auth providers.</description>
    <label>Rocket Auth0 Auth Provider</label>
    <pluralLabel>Rocket Auth0 Auth Providers</pluralLabel>
</CustomObject>