force-app/main/default/objects/Rocket_Auth0_Auth_Provider__mdt/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Audience value of the service an auth token is being requested for</description>
    <label>Audience</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>