force-app/main/default/objects/Rocket_Auth0_Auth_Provider__mdt/fields/Auth_Provider__c.field-meta.xml
<CustomField>
    <fullName>Auth_Provider__c</fullName>
    <description>Because you can&apos;t get the name of the auth provider in Auth.AuthProviderPluginClass.</description>
    <inlineHelpText>Re-enter the URL Suffix.</inlineHelpText>
    <label>Auth Provider</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>