force-app/main/default/objects/Rocket_Auth0_Auth_Provider__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>The Named Credential containing the endpoint and credentials used to retrieve a token. Using a Named Cred instead of storing the details on the Auth Provider ensures the client secret is not exposed within the system or in source control.</description>
    <inlineHelpText>The Name of Named Credential for the Rocket Auth0 environment.</inlineHelpText>
    <label>Named Credential</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>