force-app/main/default/objects/Rocket_Auth0_Auth_Provider__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <description>Scopes assigned to this client from the authorizing application</description>
    <label>Scopes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>